# PublicTransport-Analysis

./: .gitignore  CMakeLists.txt  README.md  cpp_program_output.txt  lazyimguiConfig.cmake.in  python_script_output.txt  python_script_output__trip_ids.txt
debug__gtfs_protoc_output/: cpp_program_output.txt
gtfs-realtime_projects/PublicTransportAnalyser/src/: main.cpp
gtfs-realtime_projects/PublicTransportDelayAnalyser/include/: PTDA_Coms.hpp  PTDA_Data_Gatherer.hpp  PTDA_GUI.hpp  PTDA_Useful.hpp  PTDA_Variables.hpp
gtfs-realtime_projects/PublicTransportDelayAnalyser/src/: PTDA_Data_Gatherer.cpp  PTDA_GUI.cpp  main.cpp
gtfs-realtime_projects/displayDelays/: CMakeLists.txt  imgui.ini
gtfs-realtime_projects/displayDelays/include/: includes.hpp
gtfs-realtime_projects/displayDelays/src/: main.cpp
gtfs-realtime_projects/scan_directory/: CMakeLists.txt  vcpkg.json
gtfs-realtime_projects/scan_directory/include/: helper_functions.hpp  includes.hpp  main_subprocess.hpp  project_macros.hpp  useful.hpp  variables.hpp
gtfs-realtime_projects/scan_directory/src/: helper_functions.cpp  main.cpp  main_subprocess.cpp
include/: Parser_TripUpdate.hpp  lazyimgui.hpp
lib/CURL_GET_downloader/include/: CURL_GET_downloader.hpp
lib/CURL_GET_downloader/src/: CURL_GET_downloader.cpp
lib/GTFS-RT__TripUpdate_DebugString_parser/include/: Parser_TripUpdate.hpp
lib/LazyIMGui/: README.md
lib/LazyIMGui/include/: lazyimgui.hpp  lazyimgui_includes.hpp
lib/LazyIMGui/src/: lazyimgui.cpp
protobuf_files/gtfs-realtime/src/: gtfs-realtime.proto  gtfs-realtime_commentless.proto
test_gtfs-realtime/: CMakeLists.txt  cpp__tripUpdates_parsed_data.txt  cpp__tripUpdates_raw_data.txt  tripUpdates_parsed_data.txt  vcpkg.json
test_gtfs-realtime/src/: main.cpp
